Native library closing weird behavior test